[fix] fixed width overflowing

--- a/src/views/description/Description.css
+++ b/src/views/description/Description.css
@@ -1,4 +1,5 @@
 .description-container {
+  margin: 0;
   padding: 168px 64px;
 }
 
